<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.MainActivity">

    <item
        android:id="@+id/action_profile_deslogged"
        android:title="@string/action_profile"
        android:icon="@drawable/reorder"
        app:showAsAction="always"
        android:orderInCategory="1">
        <menu>
            <item
                android:id="@+id/action_login"
                app:showAsAction="always"
                android:orderInCategory="1"
                android:title="@string/action_login">
            </item>

            <item
                android:id="@+id/action_config_deslogged"
                app:showAsAction="always"
                android:orderInCategory="2"
                android:title="@string/action_config">
            </item>

        </menu>
    </item>

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/search"
        app:showAsAction="always"
        android:orderInCategory="2">
    </item>

</menu>